commit stash y pull

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <body>
     <h1>título home local</h1>
+    <p>parrafo del home local</p>
+    <p>otro parrafo despues del stash y pull</p>
     <header>
       <nav class="nav-coco">
         <picture>
