commit de noche

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   </head>
 
   <body>
-    <h1>título home local</h1>
-    <p>parrafo del home local</p>
-    <p>otro parrafo despues del stash y pull</p>
+    <h1>titulo nuevo de noche</h1>
+    <h2>h2 nuevo de noche</h2>
     <header>
       <nav class="nav-coco">
         <picture>
